--- a/menu/menu.css
+++ b/menu/menu.css
@@ -19,7 +19,6 @@
 
 header {
  background-color: white;
- height: fit-content;
  margin: 0;
  display: flex;
  flex-direction: column;
@@ -27,29 +26,37 @@ header {
  text-align: center;
 }
 
-header .logo {
-width: 100%;
-position: relative;
-display: flex;
-justify-content: center;
-align-items: center;
-margin-top: 3%;
-margin-bottom: 1.5%;
+header .logoFleche {
+    position: relative;
+    border: 1px solid red;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    align-self: flex-start;
 }
 
-header .logo i {
-font-size: 100%;
-display: inline;
-position: absolute;
-left: 1em;
+header .logoFleche img {
+    width: 45%;
+    max-width: 300px;
+    height: auto;
+    max-height: 35px;
+    object-fit: contain;
 }
 
-header .logo img {
-max-width: 50%;
-max-height: 50px;
+
+header .logoFleche i {
+    position: absolute;
+    left: 1em;
+    font-size: 14px;
 }
+
+
 
 header .imageBG {
+margin-top: 0;
 width: 100%;  
 height: 80%;
 }
@@ -62,7 +69,7 @@ object-fit:cover;
 
 main {
 padding-top: 2em;
-margin-top: -15%;
+margin-top: -17%;
 padding-bottom: 4em;
 position: relative;
 bottom: 0px;
@@ -71,15 +78,19 @@ border-radius: 35px 35px 0 0;
 }
 
 main header {
+    
 border-radius: 35px 35px 0 0;
 background-color: rgb(237, 236, 236);
 display: flex;
 flex-direction: row;
 justify-content: space-between;
 align-items: center;
-padding-top: 1%;
-padding-bottom: 3%;
+padding-top: 0em;
+padding-bottom: 1em;
+margin-left: 5%;
 height: 4%;
+width: 95%;
+max-width: 535px;
 }
 
 main header h1 {
@@ -87,7 +98,6 @@ font-family: 'Shrikhand', cursive;
 margin: 0;
 padding: 0;
 font-size: 18px;
-margin-left: 5%;
 }
 
 .contI {
@@ -137,17 +147,19 @@ border-bottom: 2px solid green;
 .entreesFlex, .platsPrincipauxFlex, .dessertsFlex {
 display: flex;
 flex-direction: column;
-align-items: center;
+align-items: flex-start;
 }
 
 .entrees .plats, .platsPrincipaux .plats, .desserts .plats { 
 position: relative;
 border-radius: 10px;
 width: 90%;
+max-width: 500px;
 height: 40px;
 padding-top: 0.1em;
 padding-bottom: 0.1em;
 margin-bottom: 0.6em;
+margin-left: 5%;
 background-color: white;
 display: flex;
 justify-content: space-between;
@@ -315,16 +327,35 @@ footer li {
 margin-top: 0;
 }
 
+footer i {
+    margin-right: 1em;
+}
+
+#iIncorrect {
+    margin-right: 0.6em;
+}
+
 @media (min-width: 770px) and (max-width: 991px) {
 
-
+    main header {
+        margin: auto;
+    }
 
 header .logo {
 margin-top: 0;
-padding-top: 3%;
+padding-top: 1.2em;
+padding-bottom: 0.6em;
+}
+
+header .logoFleche img {
+    width: 30%;
+    object-fit: contain;
+    max-width: 350px;
+    max-height: 50px;
 }
 
 .imageBG img {
+height: auto;
 max-height: 500px;
 }
 
@@ -367,7 +398,7 @@ margin-top: 0;
 }
 
 .entrees, .platsPrincipaux, .desserts {
- margin-bottom: 3.2em;
+ margin-bottom: 2.2em;
 }
 
 
@@ -382,6 +413,7 @@ h2 {
 .entreesFlex, .platsPrincipauxFlex, .dessertsFlex {
  flex-direction: row;
  justify-content: space-evenly;
+ 
 }
 
 .entrees .plats, .platsPrincipaux .plats, .desserts .plats { 
@@ -389,6 +421,7 @@ h2 {
  max-width: 200px;
  height: 100px;
  margin-bottom: 0%;
+ margin-left: 0;
  flex-direction: column;
 }
 
@@ -397,9 +430,7 @@ h2 {
 flex-direction: column;
 justify-content: flex-start;
 width: 100%;
-min-height: 30%;
-max-height: 31%;
-margin-top: 1rem;
+margin-top: 0.5em;
 padding: 2px;
 text-align: center;
 white-space: normal;
@@ -487,38 +518,59 @@ footer li {
  margin: 0;
 }
 
-footer li a {
+footer li a, footer i {
  color: black;
 }
+
+footer i {
+    margin-right: 1em;
+}
+
    }
 
 @media (min-width: 992px) {
 
-header .logo {
+
+    main header {
+        margin: auto;
+    }
+
+
+header .logoFleche {
 
 margin-top: 0;
-padding-top: 2%;
-padding-bottom: 1.5%;
+padding-top: 1em;
+padding-bottom: 0.6em;
 height: auto;
 background-color: white;
 z-index: 100;
 box-shadow: 0 0 black;
 }
 
+header .logoFleche img {
+    
+    width: 30%;
+    max-width: 400px;
+    max-height: 70px;
+}
+
 header .imageBG {
-margin-top: -12%;
-width: 50%;
-max-height: 1200px;
+margin-top: -0%;
+width: 100%;
+
 }
 
 header .imageBG img {
- width: 100%;
+    
+border: 1px solid blue;
+ width: 50%;
+ max-height: 450px;
 }
 
 main {
- padding-top: 2%;
+ padding-top: 3em;
  margin-top: -5%;
- padding-bottom: 6%;
+ padding-bottom: 2.4em;
 }
   
 main header {
@@ -667,9 +719,9 @@ font-size: 16px;
 margin: 0;
 }
 
-footer li a {
-color: black;
-}
+footer li a, footer i {
+    color: black;
+   }
 
  }
 
